load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//:zip.bzl", "pkg_zip")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/kindlyops/baffled/webhook",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/aws/aws-lambda-go/events:go_default_library",
        "//vendor/github.com/aws/aws-lambda-go/lambda:go_default_library",
    ],
)

go_binary(
    name = "webhook",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

pkg_zip(
    name = "deploy.zip",
    visibility = ["//visibility:public"],
    deps = [
        ":webhook",
    ],
)
